k8/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: island-ci-cd-poc
spec:
  finalizers:
  - kubernetes
