k8/app/sample-rest-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-rest-api
    app.kubernetes.io/component: sample-rest-api
    app.kubernetes.io/instance: sample-rest-api
    app.kubernetes.io/name: sample-rest-api
    app.kubernetes.io/part-of: sample-rest-api
  name: sample-rest-api
  namespace: island-ci-cd-poc
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sample-rest-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sample-rest-api
        deployment: sample-rest-api
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/island-ci-cd-poc/sample-rest-api:latest
        imagePullPolicy: Always
        name: sample-rest-api
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
