k8/app/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sample-rest-api
    app.kubernetes.io/component: sample-rest-api
    app.kubernetes.io/instance: sample-rest-api
    app.kubernetes.io/name: sample-rest-api
    app.kubernetes.io/part-of: sample-rest-api
  name: sample-rest-api
  namespace: island-ci-cd-poc
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sample-rest-api
    weight: 100
  wildcardPolicy: None
