k8/app/eventlistener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener
  name: el-event-listener
  namespace: island-ci-cd-poc
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/managed-by: EventListener
      app.kubernetes.io/part-of: Triggers
      eventlistener: event-listener
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: EventListener
        app.kubernetes.io/part-of: Triggers
        eventlistener: event-listener
    spec:
      containers:
      - args:
        - --el-name=event-listener
        - --el-namespace=island-ci-cd-poc
        - --port=8080
        - --readtimeout=5
        - --writetimeout=40
        - --idletimeout=120
        - --timeouthandler=30
        - --httpclient-readtimeout=30
        - --httpclient-keep-alive=30
        - --httpclient-tlshandshaketimeout=10
        - --httpclient-responseheadertimeout=10
        - --httpclient-expectcontinuetimeout=1
        - --is-multi-ns=false
        - --payload-validation=true
        - --cloudevent-uri=
        - --tls-cert=
        - --tls-key=
        image: registry.redhat.io/openshift-pipelines/pipelines-triggers-eventlistenersink-rhel8@sha256:0c47daeb43cb90a4b8dcdf1fa324c2672ed9193628081d734d17863f1567d087
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: event-listener
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: pipeline
      serviceAccountName: pipeline
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener
  name: el-event-listener
  namespace: island-ci-cd-poc
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-listener
    port: 8080
  - name: http-metrics
    port: 9000
  selector:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener
  name: el-event-listener
  namespace: island-ci-cd-poc
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-event-listener
    weight: 100
  wildcardPolicy: None
